--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "sequelize": "^5.8.9",
-    "sqlite3": "^4.0.8"
+    "sqlite3": "^4.0.8",
+    "bcrypt-nodejs": "^0.0.3",
+    "bluebird": "^3.5.3",
+    "joi": "^13.7.0",
+    "jsonwebtoken": "^8.4.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0"
   }
 }
